--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        " 'reply3': \"It's subjective to each person.\"}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +108,47 @@
    ],
    "source": [
     "jsonify({'message': 'Hello, world!'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def question_replies(text):\n",
+    "    class Question_Three_Replies(dspy.Signature):\n",
+    "        \"\"\"Given a tweet with a question, generate three possible unique replies\"\"\"\n",
+    "\n",
+    "        question = dspy.InputField()\n",
+    "        reply1 = dspy.OutputField(desc=\"1-5 words\")\n",
+    "        reply2 = dspy.OutputField(desc=\"1-5 words\")\n",
+    "        reply3 = dspy.OutputField(desc=\"1-5 words\")\n",
+    "    q_3 = dspy.Predict(Question_Three_Replies)\n",
+    "    answer = q_3(question=text)\n",
+    "    return answer.toDict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'reply1': 'To learn and grow.',\n",
+       " 'reply2': 'Existence is mysterious.',\n",
+       " 'reply3': 'Suffering shapes character.'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question_replies(\"Why are we still here? Just to suffer?\")"
    ]
   },
   {
