switched to response

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import dspy\n",
     "import os\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "import json"
    ]
   },
   {
@@ -149,6 +150,26 @@
    ],
    "source": [
     "question_replies(\"Why are we still here? Just to suffer?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"reply1\": \"To learn and grow.\", \"reply2\": \"Existence is mysterious.\", \"reply3\": \"Suffering shapes character.\"}'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.dumps(question_replies(\"Why are we still here? Just to suffer?\"))"
    ]
   },
   {
