--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -2,34 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import dspy\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "import json"
+    "import json\n",
+    "from openai import OpenAI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "turbo = dspy.OpenAI(model='gpt-4', api_key=OPENAI_API_KEY)\n",
-    "dspy.configure(lm=turbo)"
+    "dspy.configure(lm=turbo)\n",
+    "client = OpenAI()"
    ]
   },
   {
@@ -44,132 +38,102 @@
     "    question = dspy.InputField()\n",
     "    reply1 = dspy.OutputField(desc=\"1-5 words\")\n",
     "    reply2 = dspy.OutputField(desc=\"1-5 words\")\n",
-    "    reply3 = dspy.OutputField(desc=\"1-5 words\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q_3 = dspy.Predict(Question_Three_Replies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    reply3 = dspy.OutputField(desc=\"1-5 words\")\n",
+    "q_3 = dspy.Predict(Question_Three_Replies)\n",
     "answer = q_3(question=\"What is the meaning of life?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'reply1': \"42, according to Hitchhiker's Guide.\",\n",
-       " 'reply2': 'Personal growth and happiness.',\n",
-       " 'reply3': \"It's subjective to each person.\"}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "answer.toDict()"
+    "def filter_image(image_url, new_filter):\n",
+    "    response = client.chat.completions.create(\n",
+    "    model=\"gpt-4-vision-preview\",\n",
+    "        messages=[\n",
+    "            {\n",
+    "            \"role\": \"assistant\",\n",
+    "            \"content\": [\n",
+    "                {\"type\": \"text\", \"text\": f\"Briefly describe the contents of the image.\"},\n",
+    "                {\n",
+    "                \"type\": \"image_url\",\n",
+    "                \"image_url\": {\n",
+    "                    \"url\": image_url,\n",
+    "                },\n",
+    "                },\n",
+    "            ],\n",
+    "            }\n",
+    "        ],\n",
+    "        max_tokens=300,\n",
+    "    )\n",
+    "    prompt = response.dict()[\"choices\"][0][\"message\"][\"content\"]\n",
+    "    filtered_prompt = f\"Reimagine the following prompt if it were filtered like {new_filter}: {prompt}\"\n",
+    "    response = client.images.generate(\n",
+    "        model=\"dall-e-3\",\n",
+    "        prompt=filtered_prompt,\n",
+    "        size=\"1024x1024\",\n",
+    "        quality=\"standard\",\n",
+    "        n=1,\n",
+    "    )\n",
+    "    return response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"\n",
+    "new_filter = \"Cyberpunk\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Working outside of application context.\n\nThis typically means that you attempted to use functionality that needed\nthe current application. To solve this, set up an application context\nwith app.app_context(). See the documentation for more information.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[48], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mjsonify\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmessage\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mHello, world!\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Home\\anaconda3\\envs\\spcopenai\\Lib\\site-packages\\flask\\json\\__init__.py:170\u001b[0m, in \u001b[0;36mjsonify\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mjsonify\u001b[39m(\u001b[38;5;241m*\u001b[39margs: t\u001b[38;5;241m.\u001b[39mAny, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: t\u001b[38;5;241m.\u001b[39mAny) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Response:\n\u001b[0;32m    139\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Serialize the given arguments as JSON, and return a\u001b[39;00m\n\u001b[0;32m    140\u001b[0m \u001b[38;5;124;03m    :class:`~flask.Response` object with the ``application/json``\u001b[39;00m\n\u001b[0;32m    141\u001b[0m \u001b[38;5;124;03m    mimetype. A dict or list returned from a view will be converted to a\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    168\u001b[0m \u001b[38;5;124;03m    .. versionadded:: 0.2\u001b[39;00m\n\u001b[0;32m    169\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 170\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcurrent_app\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mresponse(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\Home\\anaconda3\\envs\\spcopenai\\Lib\\site-packages\\werkzeug\\local.py:311\u001b[0m, in \u001b[0;36m_ProxyLookup.__get__\u001b[1;34m(self, instance, owner)\u001b[0m\n\u001b[0;32m    308\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n\u001b[0;32m    310\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 311\u001b[0m     obj \u001b[38;5;241m=\u001b[39m \u001b[43minstance\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_current_object\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    312\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m:\n\u001b[0;32m    313\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfallback \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\Home\\anaconda3\\envs\\spcopenai\\Lib\\site-packages\\werkzeug\\local.py:508\u001b[0m, in \u001b[0;36mLocalProxy.__init__.<locals>._get_current_object\u001b[1;34m()\u001b[0m\n\u001b[0;32m    506\u001b[0m     obj \u001b[38;5;241m=\u001b[39m local\u001b[38;5;241m.\u001b[39mget()\n\u001b[0;32m    507\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m:\n\u001b[1;32m--> 508\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(unbound_message) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    510\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m get_name(obj)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Working outside of application context.\n\nThis typically means that you attempted to use functionality that needed\nthe current application. To solve this, set up an application context\nwith app.app_context(). See the documentation for more information."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_15576\\3189514175.py:20: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "  prompt = response.dict()[\"choices\"][0][\"message\"][\"content\"]\n"
      ]
     }
    ],
    "source": [
-    "jsonify({'message': 'Hello, world!'})"
+    "res = filter_image(url, new_filter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def question_replies(text):\n",
-    "    class Question_Three_Replies(dspy.Signature):\n",
-    "        \"\"\"Given a tweet with a question, generate three possible unique replies\"\"\"\n",
-    "\n",
-    "        question = dspy.InputField()\n",
-    "        reply1 = dspy.OutputField(desc=\"1-5 words\")\n",
-    "        reply2 = dspy.OutputField(desc=\"1-5 words\")\n",
-    "        reply3 = dspy.OutputField(desc=\"1-5 words\")\n",
-    "    q_3 = dspy.Predict(Question_Three_Replies)\n",
-    "    answer = q_3(question=text)\n",
-    "    return answer.toDict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_15576\\4191786947.py:1: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "  res.dict()[\"data\"][0][\"url\"]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'reply1': 'To learn and grow.',\n",
-       " 'reply2': 'Existence is mysterious.',\n",
-       " 'reply3': 'Suffering shapes character.'}"
+       "'https://oaidalleapiprodscus.blob.core.windows.net/private/org-GmJHIHWpURleiNtoZoMvn5zL/user-G54BCf0GIzf32UkR38JTI9gz/img-FsCkE6QppeNxysQLBZmUDDNp.png?st=2024-03-02T16%3A29%3A18Z&se=2024-03-02T18%3A29%3A18Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-03-02T15%3A16%3A27Z&ske=2024-03-03T15%3A16%3A27Z&sks=b&skv=2021-08-06&sig=Ug21C%2B1aQM80QebXKGoV%2B2FlpBHFwP69IZ%2BKi1Z/dNQ%3D'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "question_replies(\"Why are we still here? Just to suffer?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"reply1\": \"To learn and grow.\", \"reply2\": \"Existence is mysterious.\", \"reply3\": \"Suffering shapes character.\"}'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json.dumps(question_replies(\"Why are we still here? Just to suffer?\"))"
+    "res.dict()[\"data\"][0][\"url\"]"
    ]
   },
   {
