filter_image deployment?

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -23,50 +23,91 @@
     }
    ],
    "source": [
-    "# The URL you want to make a GET request to\n",
-    "url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
-    "endpoint = '/question_replies'\n",
-    "full_url = url + endpoint\n",
+    "def test_question_replies(text):    \n",
+    "    # The URL you want to make a GET request to\n",
+    "    url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
+    "    endpoint = '/question_replies'\n",
+    "    full_url = url + endpoint\n",
     "\n",
-    "# Assuming you have some variables to pass as query parameters\n",
-    "query_params = {\n",
-    "    'text': 'Why are we still here? Just to suffer?',\n",
-    "}\n",
+    "    # Assuming you have some variables to pass as query parameters\n",
+    "    query_params = {\n",
+    "        'text': text,\n",
+    "    }\n",
     "\n",
-    "# If you need to add headers\n",
-    "headers = {\n",
-    "    'Accept': 'application/json'\n",
-    "}\n",
+    "    # If you need to add headers\n",
+    "    headers = {\n",
+    "        'Accept': 'application/json'\n",
+    "    }\n",
     "\n",
-    "# Making the GET request with query parameters and headers\n",
-    "response = requests.get(full_url, params=query_params, headers=headers)\n",
+    "    # Making the GET request with query parameters and headers\n",
+    "    response = requests.get(full_url, params=query_params, headers=headers)\n",
     "\n",
-    "# Checking if the request was successful\n",
-    "if response.status_code == 200:\n",
-    "    # Processing the response\n",
-    "    data = response.json()\n",
-    "    print(data)\n",
-    "else:\n",
-    "    print('Request failed with status code', response.status_code)"
+    "    # Checking if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Processing the response\n",
+    "        data = response.json()\n",
+    "        print(data)\n",
+    "        return data\n",
+    "    else:\n",
+    "        print('Request failed with status code', response.status_code)\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_filter(image_url, new_filter):    \n",
+    "    # The URL you want to make a GET request to\n",
+    "    url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
+    "    endpoint = '/filter_image'\n",
+    "    full_url = url + endpoint\n",
+    "\n",
+    "    # Assuming you have some variables to pass as query parameters\n",
+    "    query_params = {\n",
+    "        'image_url': image_url,\n",
+    "        'new_filter': new_filter\n",
+    "    }\n",
+    "\n",
+    "    # If you need to add headers\n",
+    "    headers = {\n",
+    "        'Accept': 'application/json'\n",
+    "    }\n",
+    "\n",
+    "    # Making the GET request with query parameters and headers\n",
+    "    response = requests.get(full_url, params=query_params, headers=headers)\n",
+    "\n",
+    "    # Checking if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Processing the response\n",
+    "        data = response.json()\n",
+    "        print(data)\n",
+    "        return data\n",
+    "    else:\n",
+    "        print('Request failed with status code', response.status_code)\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request failed with status code 500\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "image_url = \"https://nypost.com/wp-content/uploads/sites/2/2024/02/Juan-Soto-1.jpg?w=1024\"\n",
+    "new_filter = \"Darth Vader\"\n",
+    "image_filter(image_url, new_filter)"
+   ]
   },
   {
    "cell_type": "code",
