debugging filter_data on prod :D

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,27 +86,38 @@
     "        print(data)\n",
     "        return data\n",
     "    else:\n",
-    "        print('Request failed with status code', response.status_code)\n",
-    "        return None"
+    "        return response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Request failed with status code 500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_url = \"https://nypost.com/wp-content/uploads/sites/2/2024/02/Juan-Soto-1.jpg?w=1024\"\n",
     "new_filter = \"Darth Vader\"\n",
-    "image_filter(image_url, new_filter)"
+    "res = image_filter(image_url, new_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<!doctype html>\\n<html lang=en>\\n<title>500 Internal Server Error</title>\\n<h1>Internal Server Error</h1>\\n<p>The server encountered an internal error and was unable to complete your request. Either the server is overloaded or there is an error in the application.</p>\\n'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.text"
    ]
   },
   {
