--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -77,62 +77,11 @@
     "        quality=\"standard\",\n",
     "        n=1,\n",
     "    )\n",
-    "    return response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return response\n",
+    "\n",
     "url = \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"\n",
-    "new_filter = \"Cyberpunk\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_15576\\3189514175.py:20: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
-      "  prompt = response.dict()[\"choices\"][0][\"message\"][\"content\"]\n"
-     ]
-    }
-   ],
-   "source": [
-    "res = filter_image(url, new_filter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_15576\\4191786947.py:1: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
-      "  res.dict()[\"data\"][0][\"url\"]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://oaidalleapiprodscus.blob.core.windows.net/private/org-GmJHIHWpURleiNtoZoMvn5zL/user-G54BCf0GIzf32UkR38JTI9gz/img-FsCkE6QppeNxysQLBZmUDDNp.png?st=2024-03-02T16%3A29%3A18Z&se=2024-03-02T18%3A29%3A18Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-03-02T15%3A16%3A27Z&ske=2024-03-03T15%3A16%3A27Z&sks=b&skv=2021-08-06&sig=Ug21C%2B1aQM80QebXKGoV%2B2FlpBHFwP69IZ%2BKi1Z/dNQ%3D'"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "new_filter = \"Cyberpunk\"\n",
+    "res = filter_image(url, new_filter)\n",
     "res.dict()[\"data\"][0][\"url\"]"
    ]
   },
