--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -102,6 +102,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_to_image(text, new_filter):    \n",
+    "    # The URL you want to make a GET request to\n",
+    "    url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
+    "    endpoint = '/text_to_image'\n",
+    "    full_url = url + endpoint\n",
+    "\n",
+    "    # Assuming you have some variables to pass as query parameters\n",
+    "    query_params = {\n",
+    "        'text': text,\n",
+    "        'new_filter': new_filter\n",
+    "    }\n",
+    "\n",
+    "    # If you need to add headers\n",
+    "    headers = {\n",
+    "        'Accept': 'application/json'\n",
+    "    }\n",
+    "\n",
+    "    # Making the GET request with query parameters and headers\n",
+    "    response = requests.get(full_url, params=query_params, headers=headers)\n",
+    "\n",
+    "    # Checking if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Processing the response\n",
+    "        data = response.json()\n",
+    "        print(data)\n",
+    "        return data\n",
+    "    else:\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'url': 'https://oaidalleapiprodscus.blob.core.windows.net/private/org-GmJHIHWpURleiNtoZoMvn5zL/user-G54BCf0GIzf32UkR38JTI9gz/img-AinsSvDy3W27bf96DQqGyMpj.png?st=2024-03-02T16%3A59%3A58Z&se=2024-03-02T18%3A59%3A58Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-03-02T16%3A23%3A06Z&ske=2024-03-03T16%3A23%3A06Z&sks=b&skv=2021-08-06&sig=aTzKYIw3IFUGeOWFMS2GzX/yaB1x5WM4CSp5LjbVCpU%3D'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Why did the chicken cross the road?\"\n",
+    "new_filter = \"In the Death Star\"\n",
+    "res = text_to_image(text, new_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
