--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -87,23 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_15576\\746405656.py:9: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
-      "  return response.dict()\n"
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_15576\\2859342553.py:13: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "  return response.dict()[\"data\"][0][\"url\"]\n"
      ]
     }
    ],
    "source": [
-    "def text_to_image(text):\n",
+    "def text_to_image(text, new_filter):\n",
+    "    if new_filter == \"None\":\n",
+    "        prompt = \"Convert the following text prompt to an image: \" + text\n",
+    "    else:\n",
+    "        prompt = f\"Reimagine the following text prompt if it were filtered like {new_filter}: {text}\"\n",
     "    response = client.images.generate(\n",
     "        model=\"dall-e-3\",\n",
-    "        prompt=\"Given the following tweet text, generate an image that represents it: \" + text,\n",
+    "        prompt=prompt,\n",
     "        size=\"1024x1024\",\n",
     "        quality=\"standard\",\n",
     "        n=1,\n",
@@ -111,26 +115,29 @@
     "    return response.dict()[\"data\"][0][\"url\"]\n",
     "\n",
     "text = \"Potatoes you want? 😂\"\n",
-    "res = text_to_image(text)"
+    "new_filter = \"Cyberpunk\"\n",
+    "res = text_to_image(text, new_filter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://oaidalleapiprodscus.blob.core.windows.net/private/org-GmJHIHWpURleiNtoZoMvn5zL/user-G54BCf0GIzf32UkR38JTI9gz/img-hmyCvZzDaKUWt3Z4VDaJj6lE.png?st=2024-03-02T16%3A53%3A03Z&se=2024-03-02T18%3A53%3A03Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-03-02T03%3A37%3A32Z&ske=2024-03-03T03%3A37%3A32Z&sks=b&skv=2021-08-06&sig=JgrAqA4NW7xf958wR5%2B10Ase7KCs33nHRyMtIgNDGHQ%3D'"
+       "'https://oaidalleapiprodscus.blob.core.windows.net/private/org-GmJHIHWpURleiNtoZoMvn5zL/user-G54BCf0GIzf32UkR38JTI9gz/img-xXRnuxh2aKW86MYxTeVx0Jcz.png?st=2024-03-02T16%3A58%3A28Z&se=2024-03-02T18%3A58%3A28Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-03-01T18%3A33%3A28Z&ske=2024-03-02T18%3A33%3A28Z&sks=b&skv=2021-08-06&sig=xhpPk5m12IWbCWMawA5Wsw4nEQeq09RFprQ85irtaTI%3D'"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "res"
+   ]
   },
   {
    "cell_type": "code",
