text_to_coords done i think

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "import json\n",
-    "from openai import OpenAI"
+    "from openai import OpenAI\n",
+    "import requests\n",
+    "import urllib.parse\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +133,88 @@
       ]
      },
      "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAPBOX_API_KEY = os.getenv(\"MAPBOX_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pk.eyJ1IjoibmFrc2Nob3UiLCJhIjoiY2x0YWVsZDU0MTlwYzJxbXR3c2JwNTRxNyJ9.p-0xpRioL5JR_ZCipgTViA'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAPBOX_API_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_to_coords(text):\n",
+    "    class Address_Finder(dspy.Signature):\n",
+    "        \"\"\"Given a tweet, derive an address or location from the tweet that could be geocoded\"\"\"\n",
+    "\n",
+    "        tweet = dspy.InputField()\n",
+    "        location = dspy.OutputField(desc=\"Address or location, or 'None' if no location found.\")\n",
+    "    add = dspy.Predict(Address_Finder)\n",
+    "    answer = add(tweet=text)\n",
+    "    encoded_location = urllib.parse.quote(answer.location, safe='')\n",
+    "    url = f\"https://api.mapbox.com/geocoding/v5/mapbox.places/{encoded_location}.json\"\n",
+    "    params = {\n",
+    "        \"access_token\": MAPBOX_API_KEY,\n",
+    "    }\n",
+    "    response = requests.get(url, params=params)\n",
+    "    lat, lon = res.json()[\"features\"][0][\"center\"]\n",
+    "    return lat, lon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = text_to_coords(\"God I love building in SF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-122.419359, 37.7792376)"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
