text_to_weather endpoint done

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -157,6 +157,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_to_coords(text):    \n",
+    "    # The URL you want to make a GET request to\n",
+    "    url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
+    "    endpoint = '/text_to_coords'\n",
+    "    full_url = url + endpoint\n",
+    "\n",
+    "    # Assuming you have some variables to pass as query parameters\n",
+    "    query_params = {\n",
+    "        'text': text,\n",
+    "    }\n",
+    "\n",
+    "    # If you need to add headers\n",
+    "    headers = {\n",
+    "        'Accept': 'application/json'\n",
+    "    }\n",
+    "\n",
+    "    # Making the GET request with query parameters and headers\n",
+    "    response = requests.get(full_url, params=query_params, headers=headers)\n",
+    "\n",
+    "    # Checking if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Processing the response\n",
+    "        data = response.json()\n",
+    "        print(data)\n",
+    "        return data\n",
+    "    else:\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'latitude': 2.3483915, 'longitude': 48.8534951}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'latitude': 2.3483915, 'longitude': 48.8534951}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_to_coords(\"Gosh the capital of France is so beautiful!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
