--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Home\\anaconda3\\envs\\spcopenai\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import dspy\n",
     "import os\n",
@@ -12,12 +21,12 @@
     "import json\n",
     "from openai import OpenAI\n",
     "import requests\n",
-    "import urllib.parse\n"
+    "import urllib.parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +170,7 @@
        "'pk.eyJ1IjoibmFrc2Nob3UiLCJhIjoiY2x0YWVsZDU0MTlwYzJxbXR3c2JwNTRxNyJ9.p-0xpRioL5JR_ZCipgTViA'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,31 +205,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = text_to_coords(\"God I love building in SF\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-122.419359, 37.7792376)"
+       "'36e013a9aeb6f527aa6198bf346233fc'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res"
+    "OPENWEATHER_API_KEY = os.getenv(\"OPENWEATHER_API_KEY\")\n",
+    "OPENWEATHER_API_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_to_weather(text):\n",
+    "    class Address_Finder(dspy.Signature):\n",
+    "        \"\"\"Given a tweet, derive an address or location from the tweet that could be geocoded\"\"\"\n",
+    "\n",
+    "        tweet = dspy.InputField()\n",
+    "        location = dspy.OutputField(desc=\"Address or location, or 'None' if no location found.\")\n",
+    "    add = dspy.Predict(Address_Finder)\n",
+    "    answer = add(tweet=text)\n",
+    "    encoded_location = urllib.parse.quote(answer.location, safe='')\n",
+    "    url = f\"https://api.mapbox.com/geocoding/v5/mapbox.places/{encoded_location}.json\"\n",
+    "    params = {\n",
+    "        \"access_token\": MAPBOX_API_KEY,\n",
+    "    }\n",
+    "    response = requests.get(url, params=params)\n",
+    "    lon, lat = response.json()[\"features\"][0][\"center\"]\n",
+    "    url = f\"https://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&appid={OPENWEATHER_API_KEY}&units=imperial\"\n",
+    "    response = requests.get(url)\n",
+    "    weather = response.json()\n",
+    "    return weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.openweathermap.org/data/2.5/weather?lat=47.0725146587006&lon=-109.172599073804&appid=36e013a9aeb6f527aa6198bf346233fc&units=imperial\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -109.1726, 'lat': 47.0725},\n",
+       " 'weather': [{'id': 804,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 40.48,\n",
+       "  'feels_like': 32.16,\n",
+       "  'temp_min': 35.49,\n",
+       "  'temp_max': 40.57,\n",
+       "  'pressure': 992,\n",
+       "  'humidity': 68,\n",
+       "  'sea_level': 992,\n",
+       "  'grnd_level': 846},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 15.99, 'deg': 178, 'gust': 25.14},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1709406212,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2002035,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1709387635,\n",
+       "  'sunset': 1709427829},\n",
+       " 'timezone': -25200,\n",
+       " 'id': 5662162,\n",
+       " 'name': 'Lewistown',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_to_weather(\"It is absolutely freezing out here in the middle of Montana!\")"
    ]
   },
   {
