redeployed weather with more specific info

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -219,6 +219,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_to_weather(text):    \n",
+    "    # The URL you want to make a GET request to\n",
+    "    url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
+    "    endpoint = '/text_to_weather'\n",
+    "    full_url = url + endpoint\n",
+    "\n",
+    "    # Assuming you have some variables to pass as query parameters\n",
+    "    query_params = {\n",
+    "        'text': text,\n",
+    "    }\n",
+    "\n",
+    "    # If you need to add headers\n",
+    "    headers = {\n",
+    "        'Accept': 'application/json'\n",
+    "    }\n",
+    "\n",
+    "    # Making the GET request with query parameters and headers\n",
+    "    response = requests.get(full_url, params=query_params, headers=headers)\n",
+    "\n",
+    "    # Checking if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Processing the response\n",
+    "        data = response.json()\n",
+    "        print(data)\n",
+    "        return data\n",
+    "    else:\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'base': 'stations', 'clouds': {'all': 94}, 'cod': 200, 'coord': {'lat': 23.778, 'lon': 120.9302}, 'dt': 1709406736, 'id': 1671564, 'main': {'feels_like': 48.49, 'grnd_level': 933, 'humidity': 95, 'pressure': 1018, 'sea_level': 1018, 'temp': 48.49, 'temp_max': 52.86, 'temp_min': 48.49}, 'name': 'Nantou', 'sys': {'country': 'TW', 'id': 86663, 'sunrise': 1709417804, 'sunset': 1709460001, 'type': 2}, 'timezone': 28800, 'visibility': 10000, 'weather': [{'description': 'overcast clouds', 'icon': '04n', 'id': 804, 'main': 'Clouds'}], 'wind': {'deg': 339, 'gust': 1.88, 'speed': 0.63}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'base': 'stations',\n",
+       " 'clouds': {'all': 94},\n",
+       " 'cod': 200,\n",
+       " 'coord': {'lat': 23.778, 'lon': 120.9302},\n",
+       " 'dt': 1709406736,\n",
+       " 'id': 1671564,\n",
+       " 'main': {'feels_like': 48.49,\n",
+       "  'grnd_level': 933,\n",
+       "  'humidity': 95,\n",
+       "  'pressure': 1018,\n",
+       "  'sea_level': 1018,\n",
+       "  'temp': 48.49,\n",
+       "  'temp_max': 52.86,\n",
+       "  'temp_min': 48.49},\n",
+       " 'name': 'Nantou',\n",
+       " 'sys': {'country': 'TW',\n",
+       "  'id': 86663,\n",
+       "  'sunrise': 1709417804,\n",
+       "  'sunset': 1709460001,\n",
+       "  'type': 2},\n",
+       " 'timezone': 28800,\n",
+       " 'visibility': 10000,\n",
+       " 'weather': [{'description': 'overcast clouds',\n",
+       "   'icon': '04n',\n",
+       "   'id': 804,\n",
+       "   'main': 'Clouds'}],\n",
+       " 'wind': {'deg': 339, 'gust': 1.88, 'speed': 0.63}}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_to_weather(\"It is absolutely freezing out in the capital of Taiwan!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
