--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -248,6 +248,15 @@
     "    url = f\"https://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&appid={OPENWEATHER_API_KEY}&units=imperial\"\n",
     "    response = requests.get(url)\n",
     "    weather = response.json()\n",
+    "    returnjson = {\n",
+    "        \"location\": weather[\"name\"],\n",
+    "        \"description\": weather[\"weather\"][0][\"description\"],\n",
+    "        \"temperature\": weather[\"main\"][\"temp\"],\n",
+    "        \"feels_like\": weather[\"main\"][\"feels_like\"],\n",
+    "        \"humidity\": weather[\"main\"][\"humidity\"],\n",
+    "        \"wind_speed\": weather[\"wind\"][\"speed\"],\n",
+    "        \"wind_direction\": weather[\"wind\"][\"deg\"],\n",
+    "    }\n",
     "    return weather"
    ]
   },
@@ -302,6 +311,76 @@
    ],
    "source": [
     "text_to_weather(\"It is absolutely freezing out here in the middle of Montana!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather = {'coord': {'lon': -109.1726, 'lat': 47.0725},\n",
+    " 'weather': [{'id': 804,\n",
+    "   'main': 'Clouds',\n",
+    "   'description': 'overcast clouds',\n",
+    "   'icon': '04d'}],\n",
+    " 'base': 'stations',\n",
+    " 'main': {'temp': 40.48,\n",
+    "  'feels_like': 32.16,\n",
+    "  'temp_min': 35.49,\n",
+    "  'temp_max': 40.57,\n",
+    "  'pressure': 992,\n",
+    "  'humidity': 68,\n",
+    "  'sea_level': 992,\n",
+    "  'grnd_level': 846},\n",
+    " 'visibility': 10000,\n",
+    " 'wind': {'speed': 15.99, 'deg': 178, 'gust': 25.14},\n",
+    " 'clouds': {'all': 100},\n",
+    " 'dt': 1709406212,\n",
+    " 'sys': {'type': 2,\n",
+    "  'id': 2002035,\n",
+    "  'country': 'US',\n",
+    "  'sunrise': 1709387635,\n",
+    "  'sunset': 1709427829},\n",
+    " 'timezone': -25200,\n",
+    " 'id': 5662162,\n",
+    " 'name': 'Lewistown',\n",
+    " 'cod': 200}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'location': 'Lewistown',\n",
+       " 'description': 'overcast clouds',\n",
+       " 'temperature': 40.48,\n",
+       " 'feels_like': 32.16,\n",
+       " 'humidity': 68,\n",
+       " 'wind_speed': 15.99,\n",
+       " 'wind_direction': 178}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returnjson = {\n",
+    "    \"location\": weather[\"name\"],\n",
+    "    \"description\": weather[\"weather\"][0][\"description\"],\n",
+    "    \"temperature\": weather[\"main\"][\"temp\"],\n",
+    "    \"feels_like\": weather[\"main\"][\"feels_like\"],\n",
+    "    \"humidity\": weather[\"main\"][\"humidity\"],\n",
+    "    \"wind_speed\": weather[\"wind\"][\"speed\"],\n",
+    "    \"wind_direction\": weather[\"wind\"][\"deg\"],\n",
+    "}\n",
+    "returnjson"
    ]
   },
   {
